# PyConverter

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
data/: area_units.yaml  length_units.yaml  temperature_units.yaml  time_units.yaml  volume_units.yaml  weight_units.yaml
data/locales/de/LC_MESSAGES/: base.mo  base.po
data/locales/en/LC_MESSAGES/: base.mo  base.po
data/locales/es/LC_MESSAGES/: base.mo  base.po
data/units/: energy_units.yaml  force_units.yaml  length_units.yaml  power_units.yaml  time_units.yaml  volume_units.yaml
data/utils/: translator.py  unit_conversion_parser.py  unit_conversion_updater.py
docs/: README_ru.md
locales/de/LC_MESSAGES/: base.mo  base.po
locales/en/LC_MESSAGES/: base.po
locales/es/LC_MESSAGES/: messages.po
locales/ru/LC_MESSAGES/: base.po
readme/: README_ru.md
scripts/: __init__.py  converting_script.py  settings.py  unit_conversion_parser.py  unit_conversion_updater.py
src/: calculator.py
src/CTkMessagebox/: ctkmessagebox.py
src/data/: angles_units.yaml  area_units.yaml  digital_data_units.yaml  fuel_consumption_units.yaml  length_units.yaml  mass_units.yaml  numeral_systems_units.yaml  pressure_units.yaml  speed_units.yaml  temperature_units.yaml  time_units.yaml  volume_units.yaml
src/locales/: messages.pot
src/locales/de/LC_MESSAGES/: base.mo  base.po
src/locales/en/LC_MESSAGES/: base.mo  base.po
src/locales/es/LC_MESSAGES/: base.mo  base.po
src/utils/: ctk_separator.py  settings.py  translator.py  unit_conversion_parser.py  unit_conversion_updater.py  widget_walker.py
(+8 files in other folders)
